WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
177677
SelectionRangeData should not hold raw RenderObject pointers
https://bugs.webkit.org/show_bug.cgi?id=177677
Summary
SelectionRangeData should not hold raw RenderObject pointers
alan
Reported
2017-09-29 12:29:02 PDT
ssia.
Attachments
Patch
(14.89 KB, patch)
2017-10-02 08:45 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(15.16 KB, patch)
2017-10-02 09:17 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(15.31 KB, patch)
2017-10-02 11:28 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-10-01 22:03:39 PDT
<
rdar://problem/34763060
>
alan
Comment 2
2017-10-02 08:45:27 PDT
Created
attachment 322378
[details]
Patch
alan
Comment 3
2017-10-02 09:17:01 PDT
Created
attachment 322380
[details]
Patch
Sam Weinig
Comment 4
2017-10-02 10:22:04 PDT
Comment on
attachment 322380
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=322380&action=review
> Source/WebCore/ChangeLog:9 > + Not testable.
I think adding why its not testable would be helpful. Also an explanation of the change and the reason behind it would be great.
> Source/WebCore/rendering/SelectionRangeData.h:80 > + RenderObject* start() const { return m_selectionContext.start(); } > + RenderObject* end() const { return m_selectionContext.end(); }
Do the callers of these functions always null check?
alan
Comment 5
2017-10-02 11:28:44 PDT
Created
attachment 322400
[details]
Patch
Antti Koivisto
Comment 6
2017-10-02 12:44:57 PDT
Comment on
attachment 322400
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=322400&action=review
> Source/WebCore/rendering/SelectionRangeData.h:51 > + : m_start(start ? makeWeakPtr(*start) : nullptr)
Might be useful to add a makeWeakPtr variant that takes a pointer and deals with nullptr.
WebKit Commit Bot
Comment 7
2017-10-02 13:06:10 PDT
Comment on
attachment 322400
[details]
Patch Clearing flags on attachment: 322400 Committed
r222738
: <
http://trac.webkit.org/changeset/222738
>
WebKit Commit Bot
Comment 8
2017-10-02 13:06:11 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug